[tool.poetry]
name = "ai-collection"
version = "0.1.0"
description = "AI collection of projects with sub tree"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.2.12"
streamlit = "^1.37.1"
openai = "^1.42.0"
langchain-openai = "^0.1.22"
langchainhub = "^0.1.21"
langchain-community = "^0.2.12"
langchain-core = "^0.2.33"
langchain-text-splitters = "^0.2.2"
sqlalchemy = "^2.0.32"
duckduckgo-search = "^6.2.10"
pypdf = "^4.3.1"
fastembed = "^0.3.4"
docarray = "^0.40.0"
validators = "^0.33.0"
langchain-ollama = "^0.1.1"
streamlit-feedback = "^0.1.3"
trubrics = "^1.6.2"
anthropic = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
